# hydro_landings

./: CMakeLists.txt  README.md  README~  package.xml
bundles/: ground_fiducials.xml  ground_fiducials.xml.em  ground_fiducials.xml.em~
launch/: bundle_markers.launch~  markers.launch~  quadrotor_autonomy.launch  quadrotor_control.launch  quadrotor_control.launch~  quadrotor_simulation.launch  spawn_quadrotor.launch
models/ground_fiducials/: model.config  model.sdf  model.sdf.em  model.sdf.em~  model.sdf~
models/ground_fiducials/tags/: fiducial_0.material  fiducial_1.material  fiducial_10.material  fiducial_11.material  fiducial_12.material  fiducial_2.material  fiducial_3.material  fiducial_4.material  fiducial_5.material  fiducial_6.material  fiducial_7.material  fiducial_8.material  fiducial_9.material  generate_codes_and_materials.py  generate_codes_and_materials.py~
src/: drone_pose_estimator.py  drone_pose_estimator.py~  drone_search.py  velocity_cmd.cpp  velocity_cmd.cpp~  visualize.py  visualize.py~
urdf/: quadrotor.urdf.xacro  quadrotor_base.urdf.xacro
urdf/sensors/: generic_camera.urdf.xacro  quadrotor_plugins.urdf.xacro  quadrotor_sensors.urdf.xacro  sonar_sensor.urdf.xacro
worlds/: cage.world  cage.world.em  gen.sh
