<?xml version="1.0"?>
<package>
	<name>hydro_landings</name>
	<version>0.0.0</version>
	<description>The hydro_landings package</description>

	<maintainer email="azwadsabik@gmail.com">Azwad Sabik</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>gazebo_ros</build_depend>
	<run_depend>gazebo_ros</run_depend>
	<run_depend>cvg_sim_gazebo_plugins</run_depend>
	
	<build_depend>cmake_modules</build_depend>

	<export>
		<gazebo gazebo_media_path="${prefix}" />
	</export>
</package>
